# IceBergTicket

./: .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  snowflakeBasic.md  snowflakeMedium.md  snowflakePro.md
src/: __init__.py
src/api/: __init__.py
src/api/controllers/: auth_controller.py
src/api/middlewares/: register_validation.py
src/api/models/: user_model.py
src/api/routers/: __init__.py  auth_routes.py
src/models/: DB.py
src/services/: JWT_service.py  auth_service.py  hash_password_service.py
src/web/: __init__.py
