[project]
name = "icebergticket"
version = "0.1.0"
description = "Sistema de tickets con Snowflake"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0.0",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.9",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "snowflake-connector-python>=3.5.0",
    "cryptography>=41.0.0",
    "gunicorn>=21.0.0",
    "pyjwt>=2.11.0",
    "requests>=2.32.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = []
